deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: andaluciaskills-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
  - host: andaluciaskills.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port: 
              number: 9000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 80


## Hacer rollback a una versión específica
#kubectl rollout undo deployment/frontend --to-revision=1

# Volver a la versión más reciente (v2)
#kubectl rollout undo deployment/frontend --to-revision=2
